[package]
name = "delaysrv"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full", "tracing"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
log = "0.4"
regex = "1"
once_cell = "1.5"
bytes = { version = "1.5.0" }
tracing-subscriber = { version = "^0.3.16", features = ["env-filter"] }

